# testing_python_build_pkgs

./: .gitignore  jenkins.output.md  myapp.py  notes_on_setup_py.md  readme.md  setup.cfg  setup.py  worker_lib.py
myapp/: __main__.py
tests/: test_myapp.py
