[bdist_wheel]

[metadata]
name=test-build-package-deploy
version=1.0.1
description=Test Build Package Deploy pipeline
long_description = file: readme.md
keywords=test, build, package, deploy
license=GPL v3 - Opensource License
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
url=https://github.com/jkdihenkar/testing_python_build_pkgs
author=JayD
author_email=jkdihenkar@gmail.com

[aliases]
test=nosetests

[nosetests]
verbosity=3
detailed-errors=1
with-coverage=1
cover-package=myapp.worker_lib